--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="one">
       <h1 class="one">
         <span data-node-name="greeting">Hiya</span>
-        <span data-node-name="name">荣淑雅</span>
+        <br>
+        <span data-node-name="name" style="margin-left: 45px;">荣淑雅</span>
       </h1>
 <!--       <p class="two" data-node-name="greetingText">I really like your name btw!</p> -->
     </div>
