--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="six">
       <img src="img/1.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
-      <!-- <img src="img/hat.svg" alt="" class="hat"> -->
+      <img src="img/hat.svg" alt="" class="hat" style="margin-left: 30px;margin-top: 7px;">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
 <!--         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5> -->
